fixed gap

--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body {
 #nav-bar .items {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
     position: fixed;
     left: -40vw;
     width: 40vw;
